add fixed to 1 project

--- a/1/index.html
+++ b/1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="form">
-		<input id="input_text" type="text">
+		<input id="input_text" type="number">
 		<input id="input_submit" type="submit">
 	</div>
 	<script src="libs/jquery/jquery-3.3.1.min.js"></script>
