add fixes to 2 project

--- a/2/index.html
+++ b/2/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="form">
-		<input id="input_text" type="text">
+		<input id="input_text" type="number">
 		<input id="input_submit" type="submit">
 	</div>
 	<div class="color-blocks"></div>
